[build-system]
requires = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="cap_from_youtube"
version = "0.0.10"
description="cap from youtube"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[dependencies]
numpy = "==1.24.4"
yt_dlp = "==2023.3.4"


[tool.setuptools.packages.find]
where = [""]
include = ["cap_from_youtube"]
namespaces = true
